updated the text

--- a/assignment1-b/index.html
+++ b/assignment1-b/index.html
@@ -43,9 +43,9 @@
 		<tr> 
 			<td align="center" height="50"> 
 				<b>Mon</b></td> 
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
-			<td align="center" height="50">hindi</td> 
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
+			<td align="center" height="50">Hindi</td> 
             <td rowspan="6" align="center" height="50"> 
 				<h2>B<br>R<br>E<br>A<br>K</h2> 
 			</td> 
@@ -62,9 +62,9 @@
 			</td> 
 			
 			</td> 
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
-			<td  align="center" height="50">hindi</td> 
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
+			<td  align="center" height="50">Hindi</td> 
             <td align="center" height="50">Maths</td> 
             <td align="center" height="50">Games</td> 
             <td align="center" height="50">Moral Science</td> 
@@ -73,9 +73,9 @@
 			<td align="center" height="50"> 
 				<b>Wed</b> 
 			</td> 
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
-			<td  rowspan="3" align="center" height="50" >hindi</td>  
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
+			<td  rowspan="3" align="center" height="50" >Hindi</td>  
             <td align="center" height="50">Maths</td> 
             <td align="center" height="50">Games</td> 
             <td align="center" height="50">Moral Science</td> 
@@ -86,8 +86,8 @@
 			<td align="center" height="50"> 
 				<b>Thursday</b> 
 			</td> 
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
 			<!-- <td align="center" height="50">hindi</td>  -->
             <td align="center" height="50">Maths</td> 
             <td align="center" height="50">Games</td> 
@@ -100,8 +100,8 @@
 				<b>Friday</b> 
 			</td> 
 			
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
 			<!-- <td align="center" height="50">hindi</td>  -->
             <td align="center" height="50">Maths</td> 
             <td align="center" height="50">Games</td> 
@@ -111,9 +111,9 @@
 			<td align="center" height="50"> 
 				<b>Saturday</b> 
 			</td> 
-			<td align="center" height="50">science</td> 
-			<td align="center" height="50">english</td> 
-			<td align="center" height="50">hindi</td> 
+			<td align="center" height="50">Science</td> 
+			<td align="center" height="50">English</td> 
+			<td align="center" height="50">Hindi</td> 
             <td  colspan="3" align="center" height="50">Maths</td> 
             
 			
